# adpbulk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
adpbulk/: __init__.py  adpbulk.py
tests/: test_adpbulk.py
